# analystx

./: .gitignore  ENHANCEMENTS_0_1_1.md  LICENSE  README.md  pyproject.toml  test_analyze.py  test_enhanced_analysis.py  test_enhanced_features.py  test_report.html  user_subscription_analysis.html  verify_pypi.py
src/analystx/: __init__.py  advanced_analytics.py  cli.py  dictionary.py  insight_engine.py  insights_generator.py  kpi_engine.py  main.py  profiling.py  report.py
tests/: test_basic.py
