[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analystx"
version = "0.3.0"
description = "📊 Advanced analytics and KPI engine for data-driven insights and intelligent business intelligence"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MD Shariful Islam", email = "srnoyon780@gmail.com"}
]
maintainers = [
    {name = "MD Shariful Islam", email = "srnoyon780@gmail.com"}
]
keywords = [
    "analytics",
    "kpi",
    "insights",
    "profiling",
    "reporting",
    "business-intelligence",
    "data-science",
    "python",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/sinoyon/analystx"
Documentation = "https://analystx.readthedocs.io"
Repository = "https://github.com/sinoyon/analystx"
"Bug Tracker" = "https://github.com/sinoyon/analystx/issues"
"Changelog" = "https://github.com/sinoyon/analystx/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.12",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.scripts]
analystx = "analystx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src/analystx --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
